[package]
name = "cached-writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
argparse-rs = "0.1.0"
ctrlc = "3.4.0"
log = "0.4.19"
serde = { version = "1.0.169", features = ["derive"]}
serde_json = "1.0.100"
